# nara

./: CMakeLists.txt  README.md  ai.hpp  bench.hpp  board.hpp  build  eval.hpp  evaluate.hpp  evaluate_test.cpp  main.cpp  zobrist.hpp
src/: ai.hpp  bench.hpp  board.hpp  log.hpp
